# crispus

./: .gitignore  Faceplica  LEGEME.md  Makefile  README.md  arcana.c  arcana.h  chartae.c  chartae.h  cripe.c  crispe.c  crispus.c  crispus.h  internum.h  k256.c  numerus.c  proba.c  proba_chartae.c  proba_k256.c  proba_prima.c  proba_summa3.c  summa.c  summa3.c  utilia.h  velum.c
cancer/: Cargo.toml
cancer/src/: arca.rs  crispus.rs  lib.rs  numerus.rs  summa.rs  utilia.rs  velum.rs
cancer/tests/: proba.rs
